--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,17 @@
 </div>
 <footer class="footer">
   <p>
-    Este proyecto está realizado con la API de <a href="LINK_DE_TMDB">TMDB</a> con el objetivo de cubrir los contenidos
+    Este proyecto está realizado con la API de <a target="_blank"
+      href="https://developer.themoviedb.org/reference/intro/getting-started">TMDB</a> con el objetivo de cubrir los
+    contenidos
     de la materia Diseño Web II de la Tecnicatura Superior en Desarrollo de Software del Instituto 27 en la ciudad de
     Bolívar, Buenos Aires, Argentina - 2023 - Uso libre - Frank Mansilla
   </p>
   <div class="iconos-redes">
-    <a href="https://github.com/FrankMansilla/WebDesing-II-TP-FrankkMansilla" target="_blank"><img src="assets/github-mark-white.png" alt="GitHub"></a>
-    <a href="https://www.linkedin.com/in/frank-mansilla-616237210/" target="_blank"><img src="assets/LI-In-Bug.png" alt="LinkedIn"></a>
+    <a href="https://github.com/FrankMansilla/WebDesing-II-TP-FrankkMansilla" target="_blank"><img
+        src="assets/github-mark-white.png" alt="GitHub"></a>
+    <a href="https://www.linkedin.com/in/frank-mansilla-616237210/" target="_blank"><img src="assets/LI-In-Bug.png"
+        alt="LinkedIn"></a>
   </div>
 </footer>
 </body>
