--- a/src/movies.html
+++ b/src/movies.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/styles/styles.css">
     <title>Movies</title>
 </head>
+
 <body>
+
     <div class="movies">
+        <button onclick="goToHomePage()" class="back-to-home-button">Volver a la página principal</button>
         <h2>Películas</h2>
+
         <div class="movies-container" id="moviesContainer"></div>
-      </div>
-      <script src="/src/scripts/script.js"></script>
+    </div>
+    <script src="/src/scripts/script.js"></script>
+
+    <script>
+        function goToHomePage() {
+            window.location.href = 'index.html';
+        }
+    </script>
 </body>
+
 </html>
